<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInUpActivity">

    <ImageView
        android:id="@+id/ivAvatarLogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ceo"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAvatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/avatar"
        android:onClick="onClickAvatar"
        app:layout_constraintEnd_toEndOf="@+id/ptLogin"
        app:layout_constraintStart_toStartOf="@+id/ptLogin"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatarLogin" />

    <EditText
        android:id="@+id/ptName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/ptPassword"
        app:layout_constraintStart_toStartOf="@+id/ptPassword"
        app:layout_constraintTop_toBottomOf="@+id/ptPassword" />

    <EditText
        android:id="@+id/ptSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/ptName"
        app:layout_constraintStart_toStartOf="@+id/ptName"
        app:layout_constraintTop_toBottomOf="@+id/ptName" />

    <EditText
        android:id="@+id/ptMiddleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/middle_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/ptSurname"
        app:layout_constraintStart_toStartOf="@+id/ptSurname"
        app:layout_constraintTop_toBottomOf="@+id/ptSurname" />

    <EditText
        android:id="@+id/ptPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/ptLogin"
        app:layout_constraintStart_toStartOf="@+id/ptLogin"
        app:layout_constraintTop_toBottomOf="@+id/ptLogin" />

    <EditText
        android:id="@+id/ptLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/ivAvatarLogin"
        app:layout_constraintStart_toStartOf="@+id/ivAvatarLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonAvatar" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickDone"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="@+id/ptLogin"
        app:layout_constraintStart_toStartOf="@+id/ptLogin"
        app:layout_constraintTop_toBottomOf="@+id/ptMiddleName" />
</androidx.constraintlayout.widget.ConstraintLayout>